use ivy for dependency management
conform to velocity 2.0 and velocity tools 3.0